スムーススクロールボタンの追加

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </li>
     </ul>
   </nav>
+
   <main class="container-fluid content-width result">
     <div class="card-deck row">
       <a href="#" class="card">
@@ -185,6 +186,10 @@
           <small class="text-muted">この和牛の詳細を見る</small>
         </div>
       </a>
+    </div>
+
+    <div id="page-top">
+      <a href="#"></a>
     </div>
   </main>
   <footer class="content-width">
